statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myapp2
spec:
  serviceName: myservice2
  replicas: 3
  selector:
    matchLabels:
      app: myk8sdb
  template:
    metadata:
      labels:
        app: myk8sdb
    spec:
      containers:
        - name: cont2
          image: narayanarao8790/k8ssecond:dbimage
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: mysql-data
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mypvc
