appservice.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: myk8s
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
