dbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice2
spec:
  clusterip: none
  selector:
    app: njnm
    ports:
      -port: 3306
       targetPort: 3306
